Todo list added

--- a/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche.csproj
+++ b/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche.csproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\refresh.png" />
+    <Content Include="todo.txt" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
