--- a/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche.csproj
+++ b/Source/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche/EauxDeBaignade.HauteAutriche.csproj
@@ -96,11 +96,14 @@
     <Compile Include="Common\AlphaKeyGroup.cs" />
     <Compile Include="Common\DebugLogger.cs" />
     <Compile Include="Common\DownloadClient.cs" />
+    <Compile Include="Common\FillColorBrushConverter.cs" />
     <Compile Include="Common\ScreenExtensions.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="Model\Badestelle.cs" />
     <Compile Include="Model\BadestellenCsvFields.cs" />
     <Compile Include="Model\DesignTimeSampleData.cs" />
+    <Compile Include="Model\LegendItem.cs" />
+    <Compile Include="Model\WaterQualityEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
